--- a/clients/joytool/package.json
+++ b/clients/joytool/package.json
@@ -38,6 +38,7 @@
     "eslint-plugin-vue": "^9.11.0",
     "jsdom": "^22.0.0",
     "jsonp": "^0.2.1",
+    "naive-ui": "^2.34.4",
     "node-sass": "^8.0.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.8",
@@ -47,6 +48,7 @@
     "typescript": "~5.0.4",
     "unplugin-auto-import": "^0.16.0",
     "unplugin-vue-components": "^0.24.1",
+    "vfonts": "^0.0.3",
     "vite": "^4.3.5",
     "vite-plugin-inspect": "^0.7.26",
     "vitest": "^0.31.0",
